<resources>
    <string name="app_name" translatable="false">Ciências Safe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="C1" translatable="false">C1</string>
    <string name="C2" translatable="false">C2</string>
    <string name="C4" translatable="false">C4</string>
    <string name="C6" translatable="false">C6</string>
    <string name="C8" translatable="false">C8</string>
    <string-array name="list_buildings">
        <item>@string/C1</item>
        <item>@string/C2</item>
        <item>@string/C4</item>
        <item>@string/C6</item>
        <item>@string/C8</item>
    </string-array>
    <string name="building">Edifícios</string>
    <string name="room">Sala</string>
    <string name="group_12">Grupo 12</string>
    <string name="diogo_frazao" translatable="false">Diogo Frazão</string>
    <string name="filipe_bastias" translatable="false">Filipe Bastias</string>
    <string name="radica_giva" translatable="false">Radica Giva</string>
    <string name="diogo_frazao_avatar">Avatar do Diogo Frazão</string>
    <string name="filipe_bastias_avatar">Avatar do Filipe Bastias</string>
    <string name="radica_giva_avatar">Avatar da Radica Giva</string>
    <string name="homepage">Início</string>
    <string name="room_list">Lista de Salas</string>
    <string name="report_resources">Reportar Falta de Recursos</string>
    <string name="location_history">Histórico de Localização</string>
    <string name="covid_19_ciencias">COVID-19 em Ciências</string>
    <string name="about">Sobre</string>
    <string name="settings">Definições</string>
    <string name="classroom_empty">Ocupação: ⬜⬜⬜⬜</string>
    <string name="classroom_almost_empty">Ocupação: 🟩⬜⬜⬜</string>
    <string name="classroom_almost_full">Ocupação: 🟧🟧🟧⬜</string>
    <string name="classroom_full">Ocupação: 🟥🟥🟥🟥</string>
    <string name="empty">⬜⬜⬜⬜ Vazia</string>
    <string name="almost_empty">🟩⬜⬜⬜ Quase Vazia</string>
    <string name="almost_full">🟧🟧🟧⬜ Quase Cheia</string>
    <string name="full">🟥🟥🟥🟥 Cheia</string>
    <string name="classroom_no_info">Ocupação: -</string>
    <string name="classroom_error">Ocupação: Houve um erro a ir buscar a informação.</string>
    <string name="report_occupation">Reportar Ocupação</string>
    <string name="occupation">Ocupação</string>
    <string name="report">Reportar</string>
    <string name="cancel">Cancelar</string>
    <string name="diogo_frazao_number" translatable="false">51595</string>
    <string name="filipe_bastias_number" translatable="false">55726</string>
    <string name="radica_giva_number" translatable="false">44311</string>
    <string name="order_by">Ordenar por:</string>
    <string name="ascending_date">Data Ascendente</string>
    <string name="descending_date">Data Descendente</string>
    <string-array name="order">
        <item>@string/ascending_date</item>
        <item>@string/descending_date</item>
    </string-array>
    <string name="week">Semana: %1$s</string>
    <string name="confirmed_cases">N° de novos casos confirmados: %1$s</string>
    <string name="high_risk">N° de novos contactos de alto risco: %1$s</string>
    <string name="tests">N° de testes: %1$s</string>
    <string name="last_reported">Última vez reportado: %1$s</string>
    <string name="last_reported_no_info">"Última vez reportado: Não existe informação recente para esta sala. "</string>
    <string name="profile">Perfil</string>
    <string name="project">Projeto</string>
    <string name="app_icon">Ícone da Aplicação</string>
    <string name="room_empty">A sala %1$s está vazia!</string>
    <string name="room_almost_empty">A sala %1$s está quase vazia!</string>
    <string name="room_almost_full">A sala %1$s está quase cheia!</string>
    <string name="room_full">A sala %1$s está cheia!</string>
    <string name="room_no_info">A sala %1$s não tem informação recente.</string>
    <string name="go_to_room">Desloque-se perto de uma sala...</string>
    <string name="email_sent">Falta de recurso reportado.</string>
    <string name="email_subject">Falta de Recurso - Info</string>
    <string name="maximum_capacity">Lotação: %1$s lugares</string>
    <string name="room_report">Sala: %1$s</string>
    <string name="building_report">Edifício: %1$s</string>
    <string name="resource_report">Recurso: %1$s</string>
    <string name="alcohol_gel">Recurso: Álcool Gel</string>
    <string name="room_half_full">A sala %1$s está metade cheia!</string>
    <string name="email_will">Vai ser enviado um email automáticament para os responsáveis com a informação do recurso.</string>
    <string name="historic">Histórico</string>
    <string name="qr_code">Por favor foque no código QR</string>
    <string name="classroom_half_full">Ocupação: 🟨🟨⬜⬜</string>
    <string name="half_full">🟨🟨⬜⬜ Meio Cheia</string>
</resources>