<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".AboutActivity">

            <TextView
                android:id="@+id/group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/group_12"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/student_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diogo_frazao"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/image_student_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_student_1"
                app:layout_constraintTop_toTopOf="@+id/image_student_1" />

            <ImageView
                android:id="@+id/image_student_1"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/diogo_frazao_avatar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/group"
                app:srcCompat="@drawable/df"
                android:layout_marginLeft="16dp" />

            <TextView
                android:id="@+id/student_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filipe_bastias"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/image_student_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_student_2"
                app:layout_constraintTop_toTopOf="@+id/image_student_2" />

            <ImageView
                android:id="@+id/image_student_2"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/filipe_bastias_avatar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_student_1"
                app:srcCompat="@drawable/fb"
                android:layout_marginLeft="16dp" />

            <TextView
                android:id="@+id/student_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radica_giva"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/image_student_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_student_3"
                app:layout_constraintTop_toTopOf="@+id/image_student_3" />

            <ImageView
                android:id="@+id/image_student_3"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/radica_giva"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_student_2"
                app:srcCompat="@drawable/rg"
                android:layout_marginLeft="16dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>